[project]
name = "playwright-lambda-101"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "playwright (>=1.49.1,<2.0.0)", "pytest (>=8.3.4,<9.0.0)", "pytest-playwright (>=0.6.2,<0.7.0)",]
[[project.authors]]
name = "solankiyogesh2511"
email = "solankiyogesh2511@gmail.com"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
execnet = "2.1.1"
greenlet = "3.1.1"
idna = "3.10"
iniconfig = "2.0.0"
packaging = "24.2"
playwright = "1.49.1"
pluggy = "1.5.0"
pyee = "12.0.0"
pytest = "8.3.4"
pytest-base-url = "2.1.0"
pytest-playwright = "0.6.2"
pytest-xdist = "3.6.1"
python-slugify = "8.0.4"
requests = "2.32.3"
text-unidecode = "1.3"
toml = "0.10.2"
typing_extensions = "4.12.2"
urllib3 = "2.3.0"
Jinja2 = "3.1.5"
MarkupSafe = "3.0.2"
pytest-html = "4.1.1"
pytest-metadata = "3.1.1"
backcall = "0.2.0"
docopt = "0.6.2"
ipython = "8.12.3"
pickleshare = "0.7.5"
pipreqs = "0.5.0"
yarg = "0.1.9"
